--- a/index.html
+++ b/index.html
@@ -972,7 +972,7 @@ border-radius: 10px;
       <a href = "https://github.com/techsparkz"><button  class="inline-flex  bg-gray-100 border-0 py-2 px-5 focus:outline-none hover:bg-gray-200 rounded text-base mt-4 md:mt-0">Projects
       </button></a>
       <div class =  "divider"></div>
-      <a href = "from.html"><button  class="inline-flex  bg-gray-100 border-0 py-2 px-5 focus:outline-none hover:bg-gray-200 rounded text-base mt-4 md:mt-0">Contact
+      <a href = "form.html"><button  class="inline-flex  bg-gray-100 border-0 py-2 px-5 focus:outline-none hover:bg-gray-200 rounded text-base mt-4 md:mt-0">Contact
       </button></a>
    
 
