--- a/form.html
+++ b/form.html
@@ -174,6 +174,7 @@
             <div class="flex flex-wrap -m-2">
               <div class="p-2 w-1/2">
                 <div class="relative">
+                    <form action = "https://getform.io/f/cf0f52c2-b648-4239-a427-320f8d2b393a" method="POST">
                   <label for="name" class="leading-7 text-sm text-gray-600">Name</label>
                   <input type="text" id="name" name="name" class="w-full bg-gray-100 bg-opacity-50 rounded border border-gray-300 focus:border-indigo-500 focus:bg-white focus:ring-2 focus:ring-indigo-200 text-base outline-none text-gray-700 py-1 px-3 leading-8 transition-colors duration-200 ease-in-out">
                 </div>
@@ -193,6 +194,7 @@
               <div class="p-2 w-full">
                 <button class="flex mx-auto text-white bg-indigo-500 border-0 py-2 px-8 focus:outline-none hover:bg-indigo-600 rounded text-lg">Submit</button>
               </div>
+                  </form>
              
                   </a>
                 </span>
