--- a/form.html
+++ b/form.html
@@ -174,7 +174,7 @@
             <div class="flex flex-wrap -m-2">
               <div class="p-2 w-1/2">
                 <div class="relative">
-                    <form action = "https://getform.io/f/cf0f52c2-b648-4239-a427-320f8d2b393a" method="POST">
+                    <form action = "https://www.formbackend.com/f/1e2fbceb85a631f0" method="POST">
                   <label for="name" class="leading-7 text-sm text-gray-600">Name</label>
                   <input type="text" id="name" name="name" class="w-full bg-gray-100 bg-opacity-50 rounded border border-gray-300 focus:border-indigo-500 focus:bg-white focus:ring-2 focus:ring-indigo-200 text-base outline-none text-gray-700 py-1 px-3 leading-8 transition-colors duration-200 ease-in-out">
                 </div>
