--- a/index.html
+++ b/index.html
@@ -1005,8 +1005,7 @@ border-radius: 10px;
               <p class="card-desc">Hi, I am Ronit Khanna<br>
 I am a Python Programmer and Frontend Dev.<br>
 I know Python,HTML,CSS,JS.<br>
-I have made some apps like Whatsapp Automater which automates
-sending messages in WhatsApp and scheduling messages.
+I have made some apps like Whatsapp Automater which automates sending messages in WhatsApp and scheduling messages.
       
               </p>
       
