--- a/index.html
+++ b/index.html
@@ -1002,7 +1002,23 @@ border-radius: 10px;
   margin-left:70px;
   padding-left:50px;
 }
-        
+.card-social {
+
+  display: -webkit-box;
+
+  display: flex;
+
+  -webkit-box-align: center;
+
+          align-items: center;
+
+  padding: 0 20px;
+  margin-left: 130px;
+  margin-top:30px;
+
+  
+
+}     
         
 }
 
