--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ronit Khanna</title>
     <link href="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css" rel="stylesheet">
+    <link rel = "icon" href = "https://avatars.githubusercontent.com/u/73343132?v=4" type  = "image/x-icon">
     <link rel="preconnect"
         href="https://fonts.gstatic.com">
     <link href=
