--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ronit Khanna</title>
     <link href="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css" rel="stylesheet">
-    <link rel = "icon" href = "https://avatars.githubusercontent.com/u/73343132?v=4" type  = "image/x-icon">
+    <link rel = "icon" href = "https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRCYL18A1OJ4zHRDqZ4T1oT3MziCIKx99BiTxNklBrWUtFZ3OLbAb82IvQlEJsGkahpupY&usqp=CAU" type  = "image/x-icon">
     <link rel="preconnect"
         href="https://fonts.gstatic.com">
     <link href=
